--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
+
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
 }
 
 kapt {
