--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_URL", "\"http://206.189.40.49:8111/\""
     }
 
     buildTypes {
@@ -74,6 +75,8 @@ dependencies {
     implementation 'com.github.amarjain07:StickyScrollView:1.0.3'
 
     implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
 
 kapt {
