--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
 
 kapt {
