--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdk 26
         targetSdk 33
         versionCode 2
-        versionName "1.3"
+        versionName "1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "BASE_URL", "\"http://206.189.40.49:5000/\""
@@ -85,6 +85,8 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation "com.airbnb.android:lottie:3.4.1"
+
+    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
 }
 
 kapt {
